# aeumbra

./: .gitignore  .railwayignore  .renderignore  API_INTEGRATION_SUMMARY.md  APP_FLOW_DIAGRAMS.md  BACKEND_DEPLOYMENT.md  BACKEND_DEPLOYMENT_OPTIONS.md  COMPLETE_APP_FLOW.md  COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOY_TO_RENDER.md  EXTERNAL_ACCESS_GUIDE.md  FRONTEND_AUTH_FIX.md  FRONTEND_RENDER_INTEGRATION.md  GIT_SETUP.md  NETLIFY_DEPLOYMENT.md  NETLIFY_DEPLOYMENT_FIX.md  NETWORK_ERROR_FIX.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_QUICK_FIX.md  RENDER_APP_ACCESS.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_DEPLOYMENT_SOLUTION.md  RENDER_ENVIRONMENT_VARIABLES.md  RENDER_FIX_DOCKER_ISSUE.md  RENDER_FRONTEND_DEPLOYMENT.md  RENDER_NATIVE_DEPLOY.md  RENDER_QUICK_DEPLOY.md  RENDER_SIMPLE_DEPLOY.md  SERVERS_RUNNING.md  TAILSCALE_SETUP.md  TEST_RESULTS.md  TIMEOUT_FIX_SUMMARY.md  WORKING_TEST_CREDENTIALS.md  clear-demo-banner.js  clear-mock-data.js  deploy-to-production.sh  deploy-to-railway.sh  fix-api-calls.sh  fix-eslint.sh  fix_database.sql  (+9 more)
pythonbackend/: .dockerignore  .gitignore  API_IMPLEMENTATION_SUMMARY.md  BACKEND_READY_FOR_RAILWAY.md  DATABASE_READY.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  GCP_DEPLOYMENT_GUIDE.md  HOW_TO_GET_DEPLOYMENT_URL.md  RAILWAY_DATABASE_SETUP.md  RAILWAY_FIX.md  RAILWAY_POSTGRESQL_SETUP.md  README.md  README_DEPLOY.md  alembic.ini  build.sh  cloudbuild.yaml  deploy-gcp.sh  env.example  main.py  pyproject.toml  railway.toml  requirements-vercel.txt  requirements.txt  setup.py  start.sh  test_db_connection.py  (+1 more)
(+90 files in other folders)
