[tool.setuptools]
[project]
name = "aeumbra-backend"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
description = "Security Guard Freelancing Platform Backend"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "greenlet",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "pydantic==1.10.12",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
]

[tool.pip]
python-version = "3.11.5"

